--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@ant-design/pro-layout": "^7.14.3",
+    "antd": "^5.5.2",
+    "axios": "^1.4.0",
     "umi": "^4.0.70"
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@umijs/plugins": "^4.0.70",
     "typescript": "^5.1.3"
   }
 }
